--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,12 @@
 }
 
 :root {
-  --color-bg: #1f1f38;
-  --color-bg-variant: #2c2c6c;
-  --color-primary: #4db5ff;
-  --color-primary-variant: rgba(77, 181, 255, 0.4);
+  --color-bg: #151E3D;
+  --color-bg-variant: #1b4e85;
+  --color-primary: #0492C2;
+  --color-primary-variant: #99e8fa;
   --color-white: #fff;
-  --color-light: rgba(255, 255, 255, 0.6);
+  --color-light: whitesmoke;
 
   --transition: all 400ms ease;
   --container-width-lg: 75%;
@@ -88,7 +88,7 @@ a:hover {
   display: inline-block;
   color: var(--color-primary);
   padding: 0.75rem 1.2rem;
-  border-radius: 0.4rem;
+  border-radius: 0.3rem;
   cursor: pointer;
   border: 1px solid var(--color-primary);
   transition: var(--transition);
