--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@
 :root {
   --color-bg: #151E3D;
   --color-bg-variant: #1b4e85;
-  --color-primary: #0492C2;
-  --color-primary-variant: #99e8fa;
+  --color-primary: #0195c7c8;
+  --color-primary-variant: #8ce3f6b9;
   --color-white: #fff;
   --color-light: whitesmoke;
 
