--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,13 +1,14 @@
 .about__container {
     display: grid;
     grid-template-columns: 35% 50%;
-    gap: 15%
+    gap: 15%;
+    text-align: justify;
 }
 
 .about__me {
     width: 100%;
     aspect-ratio: 1/1;
-    border-radius: 2rem;
+    border-radius: 0.3rem;
     background: linear-gradient(
         45deg,
         transparent,
@@ -19,7 +20,7 @@
  }
 
 .about__me-image {
-    border-radius: 2rem;
+    border-radius: 0.3rem;
     overflow: hidden;
     transform: rotate(10deg);
     transition: var(--transition);
@@ -38,7 +39,7 @@
 .about__card {
     background: var(--color-bg-variant);
     border: 1px solid transparent;
-    border-radius: 1rem;
+    border-radius: 0.3rem;
     padding: 2rem; 
     text-align: center;
     transition: var(--transition);
@@ -57,11 +58,11 @@
 }
 
 .about__card h5 {
-    font-size: 0.95rem;
+    font-size: 1rem;
 }
 
 .about__card small {
-    font-size: 0.7rem;
+    font-size: 1rem;
     color: var(--color-light);
 }
 
