--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 header {
-    height: 100vh;
+    height: 35vh;
     padding-top: 7rem;
     overflow: hidden;
 }
@@ -7,7 +7,7 @@ header {
 .header__container {
     text-align: center;
     height: 100%;
-    position: relative;
+    position: 
 }
 
 /* ======= CTA ======= */
@@ -18,61 +18,25 @@ header {
     justify-content: center;
 }
 
-/* ======= HEADER SOCIALS ======= */
 .header__socials {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.8rem;
-    position: absolute;
-    left: 0;
-    bottom: 3rem;
-}
-
-.header__socials::after {
-    content: "";
-    width: 1px;
-    height: 2rem;
-    background: var(--color-primary);
-}
-
-/* ======= IMAGE (ME) ======= */
-.me {
-    background: linear-gradient(var(--color-primary), transparent);
-    width: 22rem;
-    height: 30rem;
-    position: absolute;
-    left: calc(50% - 11rem);
-    margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
-    overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem;
-}
-
-/* ======= SCROLL DOWN ======= */
-.scroll__down {
-    position: absolute;
-    right: -2.3rem;
-    bottom: 5rem;
-    transform: rotate(90deg);
-    font-weight: 300;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    margin: 0.5rem auto 3rem;
 }
 
 /*======= MEDIA QUERIS (MEDIUM DEVICES) =========== */
 @media screen and (max-width: 1024px) {
     header {
-        height: 68vh;
+        height: 35vh;
     }
   }
   
 /*======= MEDIA QUERIS (SMALL DEVICES) =========== */
 @media screen and (max-width: 600px) {
     header {
-        height: 100vh;
+        height: 40vh;
     }
-
-    .header__socials, .scroll__down {
-        display: none;
-    }
-  }
+}
